Fixed alignment

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .pad {
-  padding-left: 20px;
+  padding-left: 15px;
   padding-right: 6px;
 }
 
